# plugin-mcstatus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
nonebot_plugin_mcstatus/: __init__.py  data.py  handle.py  parser.py
