[tool.poetry]
name = "nonebot-plugin-mcstatus"
version = "0.1.6"
description = "Check Minecraft server status"
authors = ["Jigsaw <j1g5aw@foxmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jigsaw111/nonebot_plugin_puppet"
repository = "https://github.com/Jigsaw111/nonebot_plugin_puppet"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0b1"
nonebot-adapter-onebot = "^2.0.0b1"
nonebot-plugin-apscheduler = "^0.1.2"
mcstatus = "^9.0.0.dev5"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.1"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"