[tool.poetry]
name = "nonebot-plugin-mcstatus"
version = "0.1.7"
description = "Check Minecraft server status"
authors = ["Jigsaw <j1g5aw@foxmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nonepkg/nonebot-plugin-mcstatus"
repository = "https://github.com/nonepkg/nonebot-plugin-mcstatus"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc1"
nonebot-adapter-onebot = "^2.1.5"
nonebot-plugin-apscheduler = "^0.2.0"
mcstatus = "^10.0.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.1"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
